--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon main.js",
-    "lint" : "eslint .",
-    "lint:fix" : "eslint . --fix"
+    "dev": "nodemon main.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -26,11 +26,17 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cloudinary": "^1.23.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
+    "pify": "^5.0.0",
     "sequelize": "^6.3.5"
   }
 }
