--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "pify": "^5.0.0",
     "sequelize": "^6.3.5"
