--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "uqdid6srumulmbu3",
-    "password": "H1u3xJPwK7uTnd0asuJU",
-    "database": "bv7ui0dhd6fl3fngoynu",
-    "host": "bv7ui0dhd6fl3fngoynu-mysql.services.clever-cloud.com",
+    "username": "root",
+    "password": "bagus123456",
+    "database": "room",
+    "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": 0
   },
