--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "pify": "^5.0.0",
